--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <body>
     <header>
       <div id="Home" class="navbar">
-        <h1>Portfolio</h1>
+        <div class="portfolio">
+        <h1>Portfolio<br/></h1>
+      </div>
+      <div>
         <nav>
           <a href="#Home">Home</a>
           <a href="#About">About</a>
@@ -24,6 +27,7 @@
           <a href="#Skills">Skills</a>
           <a href="#getInTouch">Contact</a>
         </nav>
+      </div>
         <navigation>
           <li>
             <a href="#Home"><i class="fa-solid fa-house"></i></a>
