--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
         <h1>Bhuvaneswari Rajendran</h1>
         <h2>And I'm a <span class="auto-type"></span></h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-          deleniti laborum molestias aut quod rerum officiis esse dolor
-          voluptatem beatae, iure voluptates fugiat ea iusto nemo, ullam in a
-          fugit voluptate blanditiis ipsa ratione! Ullam ducimus delectus,
-
+          As a dedicated front-end developer, I build user-friendly and engaging web experiences with great precision. Passionate about continuous learning, I explore new technologies to deliver innovative and cutting-edge solutions in a rapidly changing industry.
         </p>
         <div class="button">
           <a href="https://drive.google.com/file/d/12JvorImMwrT-BvvL-6uxIEZvU1v63QlE/view?usp=drivesdk" target="_blank"><button class="btn">Download CV</button></a>
@@ -177,6 +173,13 @@
      <section>
       <div id="getInTouch"class="getIn">
            <h1>Get In Touch</h1>
+           <div class="footer">
+        
+            <div><a href="tel:9360189620"  target="_blank" style="color: #fff;"><i class="fa-solid fa-phone"></i></a>
+            <a href="https://www.linkedin.com/in/bhuvaneswari-r-7a3813264"  target="_blank" style="color: #fff;"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="mailto: buvaneswaribuvaneswarirajendra@gmail.com" style="color: #fff;"><i class="fa-regular fa-envelope"></i></a></div>
+            
+          </div>
            <h3>For world-class website design and development, click below to reach out.<br/>
             Let’s collaborate <span class="auto-loop"></span>
           </h3>
