--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="icon"><i class="fa-solid fa-kitchen-set"></i></div>
                 <p>Developed a Swiggy mock site with reusable React components, using class components and hooks to enhance performance and maintainability. Improved app performance with Shimmer pages and ensured cross-browser compatibility. Skilled in HTML, CSS, JavaScript, REST APIs, and React, creating efficient, user-friendly web applications.</p>
             <div class="button">
-              <a href="#"><button class="P-btn">Visit Now</button></a>
+              <a href="https://buvana1305.github.io/Food-Order/"><button class="P-btn">Visit Now</button></a>
             </div>
             </article>
             
